--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ndx-roster-client",
+  "name": "ndx-roster",
   "description": "roster of connected users for ndx-framework",
   "main": "build/index.js",
   "authors": [
